Alterando mensagem de erro a ser apresentada quando o navegador não suportar a tag de vídeo

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
         <video autoplay loop muted class="absolute z-10 w-auto opacity-10">
             <source src="./src/assets/img/video-background.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
+            Seu navegador não suporta a tag de vídeo.
         </video>
         </d>
     </div>
