Adicionando a sessão de footer

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         </nav>
     </header>
 
+    <div class="relative">
+        <img src="./src/assets/img/poligonos.png" alt="" class="poligonos-image">
+    </div>
+
     <div class="container mx-auto pt-10">
         <div class="flex flex-wrap items-start justify-center ">
             <div class="flex flex-wrap pt-28 w-2/4">
@@ -118,10 +122,13 @@
                     <form action="" method="POST">
                         <div class="py-8">
                             <input type="text"
-                                class="appearance-none border-2 border-bg-neutral-400 rounded-lg w-9/12 py-3 px-5 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-800" placeholder="Minha localização atual">
+                                class="appearance-none border-2 border-bg-neutral-400 rounded-lg w-9/12 py-3 px-5 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-800"
+                                placeholder="Minha localização atual">
                         </div>
                         <div>
-                            <input type="text" class="appearance-none border-2 border-bg-neutral-400 rounded-lg w-9/12  py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-800" placeholder="Local para coleta da minha mercadoria">
+                            <input type="text"
+                                class="appearance-none border-2 border-bg-neutral-400 rounded-lg w-9/12  py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-800"
+                                placeholder="Local para coleta da minha mercadoria">
                         </div>
                         <div class="pt-8">
                             <button type="submit">
@@ -144,6 +151,8 @@
         </div>
     </div>
 
+
+
     <div class="relative flex items-start justify-center h-screen mb-12 overflow-hidden ">
         <div class="relative z-30 flex items-start justify-center pt-24">
             <div class="w-5/12 px-16 mx-24">
@@ -152,7 +161,8 @@
                         Entenda um pouco mais sobre nossos objetivos
                     </h2>
                     <p class="font-light text-gray-600 text-lg pt-12 w-8/12">
-                        Conheça um pouco dos nossos objetivos e ajude os nossos <strong class="font-bold">heróis</strong> a combater
+                        Conheça um pouco dos nossos objetivos e ajude os nossos <strong
+                            class="font-bold">heróis</strong> a combater
                         o nosso inimigo em comum!
                     </p>
                 </div>
@@ -160,23 +170,28 @@
             <div class="w-5/12 text-white text-gray-600 text-lg pr-64">
                 <div>
                     <p class="py-6">
-                        Nem todo <strong class="font-bold">herói</strong> usa capa, às vezes eles usam bicicletas! Essa é a filosofia da <strong class="font-bold">Bikelivery</strong>, uma
+                        Nem todo <strong class="font-bold">herói</strong> usa capa, às vezes eles usam bicicletas! Essa
+                        é a filosofia da <strong class="font-bold">Bikelivery</strong>, uma
                         empresa com o objetivo de realizar entregas para os nossos clientes, gerar empregos e
                         principalmente ajudar o nosso meio ambiente.
                     </p>
                     <p class="py-6">
-                        Nossa missão é juntamente com os nossos poderosos <strong class="font-bold">bike messengers</strong> realizar as entregas
+                        Nossa missão é juntamente com os nossos poderosos <strong class="font-bold">bike
+                            messengers</strong> realizar as entregas
                         solicitadas pelos nossos clientes e poder salvar o ar que respiramos.
                     </p>
                     <p class="py-6">
-                        Essa <strong class="font-bold">missão díaria</strong> conta com algumas ajudas que fazem toda a diferença: Gastos
+                        Essa <strong class="font-bold">missão díaria</strong> conta com algumas ajudas que fazem toda a
+                        diferença: Gastos
                         consideravelmente menores com manutenções, sem a necessidade de portar uma CNH,
                         facilidade no transporte e sem custos com combustivel.
                     </p>
                     <p class="py-6">
                         O melhor de tudo isso é que você já possui algo em comum com nossos entregadores.
-                        Os <strong class="font-bold">herói</strong>! Nos ajude a combater a poluição no ar, poluição sonora, emissão de carbono
-                        e etc. <strong class="font-bold">Seja um herói</strong> também e nos ajude a salvar o nosso planeta!
+                        Os <strong class="font-bold">herói</strong>! Nos ajude a combater a poluição no ar, poluição
+                        sonora, emissão de carbono
+                        e etc. <strong class="font-bold">Seja um herói</strong> também e nos ajude a salvar o nosso
+                        planeta!
                     </p>
                 </div>
 
@@ -196,6 +211,55 @@
         <img src="./src/assets/img/bike.png" alt="" class="bike-image relative">
     </div>
 
-</body>
+    <div class="contact-content">
+        <div class="relative">
+            <img src="./src/assets/img/poligonos.png" alt="" class="poligonos-image">
+        </div>
+        <div class="container mx-auto flex items-center justify-center">
+            <div class="w-2/4">
+                <div>
+                    <h2 class="font-bold text-5xl color-primary">
+                        Se interessou pela nossa causa e gostaria de se juntar a nós?
+                    </h2>
+                    <p class="font-light text-gray-600 text-lg pt-12 w-8/12">
+                        Caso tenha se interessado pela nossa causa, você pode se juntar a nós como uma
+                        <strong class="font-bold">empresa parceira</strong> ou se tornando um
+                        <strong class="font-bold">entregador</strong>.
+                    </p>
+                </div>
+                <div class="pt-12">
+                    <div>
+                        <h2 class="font-semibold text-2xl text-gray-500">Seja um entregador</h2>
+                        <p class="font-light text-gray-600 text-lg pt-4 w-8/12">
+                            Ao passar pelo processo para se tornar um entregador, você terá acesso a uma
+                            dashboard personalizada com todos os pedidos disponiveis próximo a você.
+                        </p>
+                    </div>
+                </div>
+                <div class="pt-12">
+                    <div>
+                        <h2 class="font-semibold text-2xl text-gray-500">Seja uma empresa parceira</h2>
+                        <p class="font-light text-gray-600 text-lg pt-4 w-8/12">
+                            Ao se tornar uma empresa parceira você terá acesso aos nossos
+                            entregadores e disponibilidade para envios com beneficios especiais!
+                        </p>
+                    </div>
+                </div>
+                <div class="pt-12">
+                    <button type="submit">
+                        <a
+                            class="font-medium bg-primary flex items-center justify-center rounded-lg w-56 h-12 text-white">
+                            Gostaria de me juntar
+                        </a>
+                    </button>
+                </div>
+            </div>
 
+            <div class="w-2/4">
+                <img src="./src/assets/img/delivery-main-bike-footer.png" alt="" class="main-image">
+            </div>
+        </div>
+
+    </div>
+</body>
 </html>
